openmediavault (0.6.0.12) stable; urgency=low

  * Fix dashboard widget issue at first startup.
  * Mantis 0001045: User defined cron mailer may send empty emails.
  * Mantis 0001046: English translation typo.

 -- Volker Theile <volker.theile@openmediavault.org>  Mon, 02 Jun 2014 19:32:11 +0200

openmediavault (0.6.0.11) stable; urgency=low

  * Update locales.
  * Various code improvements.
  * Add dashboard widget support in the admin WebGUI.
  * Missing filesystems can be removed now.
  * Mantis 0001041: Allow or force a guest access for SMB shares.
  * Mantis 0001044: SMART Scheduled tests listing fails to load after
    drive removal.

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 13 May 2014 00:11:51 +0200

openmediavault (0.6.0.10) stable; urgency=low

  * Various code improvements.
  * Use php5-fpm FastCGI process manager.
  * Change webserver from Apache2 to nginx.
  * Add PFS (Perfect Forward Secrecy) support and other security
    improvements.
  * Improve 'openmediavault' PAM configuration. Block users for 180sec
    after 3 failed WebGUI login attempts. Check the pam_tally2 manual
    page for more information.
  * Introduce new OMV configuration engine backend for PAM.
  * Introduce new WebGUI layout.
  * Add ability to customize WebGUI look via 'css/omv-custom.css' file.

 -- Volker Theile <volker.theile@openmediavault.org>  Thu, 24 Apr 2014 07:18:45 +0200

openmediavault (0.6.0.9) stable; urgency=low

  * Add option to omv-firstaid to clear the local upload package
    repository.
  * Supporting stateless address autoconfiguration (SLAAC) for IPv6
    network interfaces.
  * Supporting stateful address autoconfiguration for IPv6 network interfaces.
  * Disable fancy boot messages.
  * Increase performance of omv-jsminify.
  * Mantis 0001028: Error trying to start rsync job maually.

 -- Volker Theile <volker.theile@openmediavault.org>  Fri, 18 Apr 2014 00:25:45 +0200

openmediavault (0.6.0.8) stable; urgency=low
