@@ -8,7 +8,7 @@ Homepage: http://www.openmediavault.org
 
 Package: openmediavault
 Architecture: all
-Depends: libjs-extjs4 (>= 4.2.2), nginx, php5-fpm, libpam-modules,
+Depends: libjs-extjs4 (>= 4.2.2), nginx, php5-fpm, libpam-modules, pm-utils,
  php5-cgi, php5-cli, php5-pam, php-json-schema, sudo, ethtool, acl, ifenslave,
  resolvconf, iproute, xfsprogs, jfsutils, ntfs-3g, hdparm, sdparm, bootlogd,
  ifupdown, mdadm, postfix, libsasl2-modules, bsd-mailx, ntp, cpufrequtils,
